tests/baselines/reference/unusedSingleParameterInFunctionExpression.errors.txt
unusedSingleParameterInFunctionExpression.ts(1,21): error TS6133: 'person' is declared but its value is never read.
unusedSingleParameterInFunctionExpression.ts(2,9): error TS6133: 'unused' is declared but its value is never read.


==== unusedSingleParameterInFunctionExpression.ts (2 errors) ====
    var func = function(person: string) {
                        ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
    }